--- a/gameMechanics.CSharp.csproj
+++ b/gameMechanics.CSharp.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{822932E5-4BDD-FFB5-0D3A-9E48296C6177}</ProjectGuid>
+    <ProjectGuid>{5DA43D86-0527-579C-88FE-584E067282EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -63,19 +63,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="GameMechanicsWASD.CSharp.Plugins.csproj">
-      <Project>{A916F407-EAC6-3348-4611-B567C3441499}</Project>
-      <Name>GameMechanicsWASD.CSharp.Plugins</Name>
+    <ProjectReference Include="gameMechanics.CSharp.Plugins.csproj">
+      <Project>{B9C4B037-F3C2-B874-0A84-A045810B8817}</Project>
+      <Name>gameMechanics.CSharp.Plugins</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\EndlessController.cs" />
-    <Compile Include="Assets\FlockMember.cs" />
-    <Compile Include="Assets\GameTime.cs" />
-    <Compile Include="Assets\Platformer.cs" />
-    <Compile Include="Assets\SpawnVolume.cs" />
-    <Compile Include="Assets\TommyFangPlatformer.cs" />
-    <Compile Include="Assets\Zelda.cs" />
+    <Compile Include="Assets\Scripts\EndlessController.cs" />
+    <Compile Include="Assets\Scripts\FlockMember.cs" />
+    <Compile Include="Assets\Scripts\GameTime.cs" />
+    <Compile Include="Assets\Scripts\Platformer.cs" />
+    <Compile Include="Assets\Scripts\SpawnVolume.cs" />
+    <Compile Include="Assets\Scripts\TommyFangPlatformer.cs" />
+    <Compile Include="Assets\Scripts\Zelda.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
