--- a/gameMechanics.CSharp.csproj
+++ b/gameMechanics.CSharp.csproj
@@ -69,16 +69,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\FollowCamera.cs" />
-    <Compile Include="Assets\GameGUI.cs" />
-    <Compile Include="Assets\GameState.cs" />
-    <Compile Include="Assets\InvulnerabilityPower.cs" />
-    <Compile Include="Assets\LevelCollider.cs" />
-    <Compile Include="Assets\RigidBodyController.cs" />
-    <Compile Include="Assets\Scripts\EndlessController.cs" />
     <Compile Include="Assets\Scripts\FlockMember.cs" />
+    <Compile Include="Assets\Scripts\FollowCamera.cs" />
+    <Compile Include="Assets\Scripts\GameGUI.cs" />
+    <Compile Include="Assets\Scripts\GameState.cs" />
     <Compile Include="Assets\Scripts\GameTime.cs" />
+    <Compile Include="Assets\Scripts\InvulnerabilityPower.cs" />
+    <Compile Include="Assets\Scripts\LevelCollider.cs" />
     <Compile Include="Assets\Scripts\Platformer.cs" />
+    <Compile Include="Assets\Scripts\RigidBodyController.cs" />
     <Compile Include="Assets\Scripts\SpawnVolume.cs" />
     <Compile Include="Assets\Scripts\TommyFangPlatformer.cs" />
     <Compile Include="Assets\Scripts\Zelda.cs" />
